@@ -20,7 +20,7 @@ Options:
 
 - COPYRIGHT & LICENSE
 
-Copyright 2022-2023 Gabriel Jensen.
+Copyright 2022-2023 Gabriel Bjørnager Jensen.
 
 This program is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
